--- a/ExamenGlobalPayments/Src/Application/ElevatorControl/ElevatorControl.UI/MainWindow.xaml
+++ b/ExamenGlobalPayments/Src/Application/ElevatorControl/ElevatorControl.UI/MainWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="ElevatorControl.UI.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Simulador de Elevador" Height="500" Width="450">
+        Title="Simulador de Elevador" Height="500" Width="600">
     <Grid Margin="10">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="Auto"/>
@@ -9,45 +9,41 @@
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
 
-        <StackPanel Grid.Column="0" Margin="0,0,10,0" VerticalAlignment="Top">
+        <StackPanel Grid.Column="0" VerticalAlignment="Top" Margin="0,0,20,0">
             <TextBlock Text="Estado de puertas" FontWeight="Bold" Margin="0,0,0,10"/>
-            <StackPanel Orientation="Horizontal" Margin="0,2">
-                <Ellipse x:Name="Status5" Width="16" Height="16"/>
-                <TextBlock Text="Piso 5"/>
-            </StackPanel>
-            <StackPanel Orientation="Horizontal" Margin="0,2">
-                <Ellipse x:Name="Status4" Width="16" Height="16"/>
-                <TextBlock Text="Piso 4"/>
-            </StackPanel>
-            <StackPanel Orientation="Horizontal" Margin="0,2">
-                <Ellipse x:Name="Status3" Width="16" Height="16"/>
-                <TextBlock Text="Piso 3"/>
-            </StackPanel>
-            <StackPanel Orientation="Horizontal" Margin="0,2">
-                <Ellipse x:Name="Status2" Width="16" Height="16"/>
-                <TextBlock Text="Piso 2"/>
-            </StackPanel>
-            <StackPanel Orientation="Horizontal" Margin="0,2">
-                <Ellipse x:Name="Status1" Width="16" Height="16"/>
-                <TextBlock Text="Piso 1"/>
-            </StackPanel>
+            <UniformGrid Columns="2" Rows="5" HorizontalAlignment="Left">
+                <TextBlock Text="Piso 5:" VerticalAlignment="Center"/>
+                <Ellipse x:Name="Status5" Width="16" Height="16" VerticalAlignment="Center"/>
+
+                <TextBlock Text="Piso 4:" VerticalAlignment="Center"/>
+                <Ellipse x:Name="Status4" Width="16" Height="16" VerticalAlignment="Center"/>
+
+                <TextBlock Text="Piso 3:" VerticalAlignment="Center"/>
+                <Ellipse x:Name="Status3" Width="16" Height="16" VerticalAlignment="Center"/>
+
+                <TextBlock Text="Piso 2:" VerticalAlignment="Center"/>
+                <Ellipse x:Name="Status2" Width="16" Height="16" VerticalAlignment="Center"/>
+
+                <TextBlock Text="Piso 1:" VerticalAlignment="Center"/>
+                <Ellipse x:Name="Status1" Width="16" Height="16" VerticalAlignment="Center"/>
+            </UniformGrid>
         </StackPanel>
 
-        <Canvas Grid.Column="1" x:Name="ElevatorCanvas" Background="#EEE" Height="300" Width="200">
-            <Line X1="0" Y1="0" X2="200" Y2="0" Stroke="Black"/>
-            <Line X1="0" Y1="60" X2="200" Y2="60" Stroke="Black"/>
+        <Canvas Grid.Column="1" Background="#EEE" Height="300" Width="200">
+            <Line X1="0" Y1="0"   X2="200" Y2="0"   Stroke="Black"/>
+            <Line X1="0" Y1="60"  X2="200" Y2="60"  Stroke="Black"/>
             <Line X1="0" Y1="120" X2="200" Y2="120" Stroke="Black"/>
             <Line X1="0" Y1="180" X2="200" Y2="180" Stroke="Black"/>
             <Line X1="0" Y1="240" X2="200" Y2="240" Stroke="Black"/>
             <Line X1="0" Y1="300" X2="200" Y2="300" Stroke="Black"/>
 
-            <Rectangle x:Name="ElevatorBox" Width="80" Height="50" Fill="LightGray" Canvas.Left="60" Canvas.Top="250"/>
-            <Rectangle x:Name="DoorLeft" Width="40" Height="50" Fill="DarkGray" Canvas.Left="60" Canvas.Top="250"/>
-            <Rectangle x:Name="DoorRight" Width="40" Height="50" Fill="DarkGray" Canvas.Left="100" Canvas.Top="250"/>
+            <Rectangle x:Name="ElevatorBox" Width="80" Height="50" Canvas.Left="60" Canvas.Top="250" Fill="LightGray"/>
+            <Rectangle x:Name="DoorLeft"   Width="40" Height="50" Canvas.Left="60" Canvas.Top="250" Fill="DarkGray"/>
+            <Rectangle x:Name="DoorRight"  Width="40" Height="50" Canvas.Left="100" Canvas.Top="250" Fill="DarkGray"/>
 
-            <Button Content="▼" Tag="5" Width="20" Height="20" Canvas.Left="10" Canvas.Top="0" Click="CallButton_Click"/>
-            <Button Content="▲" Tag="4" Width="20" Height="20" Canvas.Left="10" Canvas.Top="60" Click="CallButton_Click"/>
-            <Button Content="▼" Tag="4" Width="20" Height="20" Canvas.Left="40" Canvas.Top="60" Click="CallButton_Click"/>
+            <Button Content="▼" Tag="5" Width="20" Height="20" Canvas.Left="10" Canvas.Top="0"   Click="CallButton_Click"/>
+            <Button Content="▲" Tag="4" Width="20" Height="20" Canvas.Left="10" Canvas.Top="60"  Click="CallButton_Click"/>
+            <Button Content="▼" Tag="4" Width="20" Height="20" Canvas.Left="40" Canvas.Top="60"  Click="CallButton_Click"/>
             <Button Content="▲" Tag="3" Width="20" Height="20" Canvas.Left="10" Canvas.Top="120" Click="CallButton_Click"/>
             <Button Content="▼" Tag="3" Width="20" Height="20" Canvas.Left="40" Canvas.Top="120" Click="CallButton_Click"/>
             <Button Content="▲" Tag="2" Width="20" Height="20" Canvas.Left="10" Canvas.Top="180" Click="CallButton_Click"/>
